--- a/assets/scss/_predefine.scss
+++ b/assets/scss/_predefine.scss
@@ -1,3 +1,45 @@
+@font-face {
+    font-family: Test_Söhne_400;
+    font-style: normal;
+    font-weight: 400;
+    font-display: auto;
+    src: url("../fonts/TestSöhne-Buch.otf") format("truetype")
+}
+
+@font-face {
+    font-family: Test_Söhne_italic_400;
+    font-style: italic;
+    font-weight: 400;
+    font-display: auto;
+    src: url("../fonts/TestSöhne-BuchKursiv.otf") format("truetype")
+}
+
+@font-face {
+    font-family: Test_Söhne_500;
+    font-style: normal;
+    font-weight: 500;
+    font-display: auto;
+    src: url("../fonts/TestSöhne-Kräftig.otf") format("truetype")
+}
+
+@font-face {
+    font-family: Test_Söhne_600;
+    font-style: normal;
+    font-weight: 600;
+    font-display: auto;
+    src: url("../fonts/TestSöhne-Halbfett.otf") format("truetype")
+}
+
+@font-face {
+    font-family: Test_Söhne_700;
+    font-style: normal;
+    font-weight: 700;
+    font-display: auto;
+    src: url("../fonts/TestSöhne-Dreiviertelfett.otf") format("truetype")
+}
+
+
+
 @media (prefers-reduced-motion: no-preference) {
 	:root {
 		scroll-behavior: inherit;
@@ -7,13 +49,13 @@ body {
 	margin: 0;
 	padding: 0;
 	z-index: 1;
-	font-size: 18px;
+	font-size: 20px;
 	margin: 0 auto;
 	line-height: 1.6;
 	position: relative;
 	overflow-x: hidden;
-	color: var(--art-body-color);
-	font-family: var(--art-body-font);
+	color: var(--vt-body-color);
+	font-family: var(--vt-body-font);
 	background-color: #fff;     
 	-moz-osx-font-smoothing: antialiased;
 	-webkit-font-smoothing: antialiased; 
@@ -30,7 +72,7 @@ body {
 		width: 40px;
 		height: 40px;
 		text-align: center;
-		background: var(--art-base-color-1);
+		background: var(--vt-base-color-1);
 	}
 	button.mfp-close {
 		right: 0;
@@ -39,7 +81,7 @@ body {
 		width: 40px;
 		height: 40px;
 		text-align: center;
-		background: var(--art-base-color-1);
+		background: var(--vt-base-color-1);
 	}
 }
 
@@ -54,7 +96,7 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
 	outline: none;
 	border-radius: 30px;
-	background: var(--art-base-color-1);
+	background: var(--vt-base-color-1);
 }
 .ul-li ul {
 	margin: 0;
@@ -82,7 +124,7 @@ body::-webkit-scrollbar-thumb {
 	margin-bottom: 0;
 	font-weight: 400;
 	line-height: 1.25;
-	font-family: var(--art-heading);
+	font-family: var(--vt-heading);
 }
 #preloader { 
 	position: fixed; 
