--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -19,8 +19,10 @@
 /*---------------------------------------------------- */
 
 /******* HOME PAGE 1 *******/
-
-
+/*Banner Section*/
+/*----------------------------------------------------*/
+@import "home_1/banner";
+/*---------------------------------------------------- */
 
 
 
