--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -4,90 +4,354 @@
 	width: 100%;
 	z-index: 10;
 	position: absolute;
+	.navbar-nav {
+		flex-direction: row;
+	}
+	.dropdown {
+		position: relative;
+		padding-right: 16px;
+		&:after {
+			top: 8px;
+			right: 0px;
+			content: "\f107";
+			font-size: 14px;
+			font-weight: 700;
+			font-weight: 900;
+			position: absolute;
+			color: #000;
+			font-family: 'Font Awesome 5 Pro';
+			transition: 0.3s all ease-in-out;
+		}
+		&:hover {
+			.dropdown-menu {
+				visibility: visible;
+				opacity: 1;
+				clip: inherit;
+				-webkit-transform: scaleY(1);
+				-khtml-transform: scaleY(1);
+				-moz-transform: scaleY(1);
+				-ms-transform: scaleY(1);
+				-o-transform: scaleY(1);
+				transform: scaleY(1);
+			}
+		}
+	}
+	.dropdown-menu {
+		left: 0;
+		top: 70px;
+		z-index: 100;
+		margin: 0px;
+		padding: 4px 4px;
+		height: auto;
+		min-width: 270px;
+		display: block;
+		border: none;
+		border-radius: 0;
+		position: absolute;
+		opacity: 0;
+		background: #fff ;
+		border-radius: 5px;
+		transform: scaleY(0);
+		transform-origin: 0 0 0;
+		-webkit-transform-origin: 0 0 0;
+		-ms-transform-origin: 0 0 0;
+		-o-transform-origin: 0 0 0;
+		text-align: left;
+		transition: all .3s ease-in-out;
+		box-shadow: -8px 8px 24px 0px rgba(0, 0, 0, 0.08);
+		.dropdown {
+			padding-right: 0;
+			&:after {
+				display: none;
+			}
+		}
+		.dropdown-menu {
+			top: 0px !important;
+			left: 100%;
+			transform-origin: 0 0 0;
+			-webkit-transform-origin: 0 0 0;
+			-ms-transform-origin: 0 0 0;
+			-o-transform-origin: 0 0 0;
+			transform: scaleY(0) !important;
+			a {
+				font-size: 14px;
+				font-weight: 500;
+				color: #fff;
+			}
+		}
+		li {
+			display: block;
+			margin: 0 !important;
+			transition: .3s all ease-in-out;
+			&:last-child {
+				border-bottom: none;
+			}
+			&:before {
+				display: none;
+			}
+			&:after {
+				color: #fff;
+				right: 15px;
+				transform: rotate(-90deg);
+				transition: .3s all ease-in-out;
+			}
+			&.dropdown:hover {
+				&:after {
+					transform: rotate(0);
+				}
+				.dropdown-menu {
+					top: 0; 
+					transform: scaleY(1) !important;
+				}
+			}
+			&.dropdown {
+				&:before {
+					color: #fff;
+					top: 10px;
+					right: 15px;
+				}
+			}
+			&:hover {
+				&:before {
+					color: #fff !important;
+				}
+			}
+		}
+		a {
+			width: 100%;
+			line-height: 1;
+			position: relative;
+			display: inline-block;
+			padding: 15px  0px 15px 18px !important;
+			font-weight: 500 !important;
+			font-size: 17px !important;
+			&:before {
+				top: 14px;
+				opacity: 0;
+				left: -0px;
+				font-size: 18px;
+				color: #C9F7CA;
+				content: '\f105';
+				position: absolute;
+				visibility: hidden;
+				font-family: 'Font Awesome 5 Pro';
+				font-weight: 400;
+				transition: all 500ms ease;
+			}
+			&:hover,
+			&.active {
+				color:  #3533FF !important;
+				background-color: var(--vt-title-color);
+				&:after {
+					width: 100%;
+				}
+				&:before {
+					opacity: 1;
+					left: -0px;
+					visibility: visible;
+				}
+			}
+		}
+	}
+	.canvas-trigger {
+		padding: 0;
+		width: 27px;
+		height: 27px;
+		border: none;
+		background-color: transparent;
+		@media #{$md,$sm,$xs} {
+			display: none;
+		}
+		span {
+			width: 5px;
+			height: 5px;
+			float: left;
+			margin: 2px;
+			position: relative;
+			border-radius: 50px;
+			display: inline-block;
+			transition: all 500ms ease;
+			background: #1C255C;
+		}
+		&:hover {
+			span {
+				background: #1C255C;
+			}
+			span:nth-child(1){
+				transform:translateX(9px);
+			}
+			span:nth-child(2){
+				transform:translateX(9px);
+			}
+			span:nth-child(3){
+				transform:translateY(9px);
+			}
+			span:nth-child(6){
+				transform:translateY(9px);
+			}
+			span:nth-child(9){
+				transform:translateX(-9px);
+			}
+			span:nth-child(8){
+				transform:translateX(-9px);
+			}
+			span:nth-child(7){
+				transform:translateY(-9px);
+			}
+			span:nth-child(4){
+				transform:translateY(-9px);
+			}
+		}
+	}
 	&.header_style_one {
 		.header-top-area {
 			border-bottom: 1px solid #C9F7CA;
-		}
-		.header-top {
-			.top-cta {
-				i {
-					width: 32px;
-					height: 32px;
-					display: flex;
-					font-size: 14px;
-					align-items: center;
-					margin-right: 8px;
-					border-radius: 100%;
-					justify-content: center;
-					background-color: var(--vt-gray);
+			.header-top {
+				.top-cta {
+					i {
+						width: 32px;
+						height: 32px;
+						display: flex;
+						font-size: 14px;
+						align-items: center;
+						margin-right: 8px;
+						border-radius: 100%;
+						justify-content: center;
+						background-color: var(--vt-gray);
+					}
+					span {
+						font-size: 14px;
+						a {
+							font-family: var(--vt-semibold);
+							color: var(--vt-title-color);
+						}
+					}
 				}
-				span {
+			}
+			.top-action {
+				width: 100%;
+				max-width: 520px;
+				.header-search {
+					width: 100%;
+					padding: 3px 0px;
+					max-width: 153px;
+					position: relative;
+					border-left: 1px solid #C9F7CA;
+					&:before {
+						top: 7px;
+						left: 15px;
+						font-size: 18px;
+						content: '\f002';
+						font-weight: 400;
+						position: absolute;
+						font-family: 'Font Awesome 5 Pro';
+					}
+					input {
+						width: 100%;
+						border: none;
+						padding-left: 44px;
+						&::placeholder {
+							font-size: 14px;
+							color: rgba(16, 16, 16, 0.4);
+						}
+					}
+				}
+			}
+			.action-text {
+				width: 100%;
+				max-width: 221px;
+				padding: 4px 0px;
+				border-left: 1px solid #C9F7CA;
+				a {
 					font-size: 14px;
+					padding-left: 16px;
+					color: var(--vt-title-color);
+					span {
+						font-weight: 600;
+					}
+					i {
+						margin-left: 10px;
+						transform: rotate(-45deg);
+					}
+				}
+			}
+			.action-social {
+				width: 100%;
+				max-width: 145px;
+				padding: 4px 0px;
+				border-left: 1px solid #C9F7CA;
+				a {
+					font-size: 16px;
+					margin-left: 18px;
+					&:hover {
+						color: #3533FF;
+					}
+				}
+			}
+		}
+		.vt-header-navigation-content {
+			padding: 20px 0px;
+		}
+		.vt-header-navigation {
+			.main-navigation {
+				li {
+					margin: 0px 16px;
+					position: relative;
+					&:before {
+						left: 0;
+						top: -24px;
+						width: 0px;
+						height: 2px;
+						content: '';
+						position: absolute;
+						background-color: #3533FF;
+						transition: all 500ms ease;
+					}
 					a {
-						font-family: var(--vt-semibold);
+						font-size: 16px;
+						font-family: var(--vt-heading);
 						color: var(--vt-title-color);
 					}
-				}
-			}
-		}
-		.top-action {
-			width: 100%;
-			max-width: 520px;
-			.header-search {
-				width: 100%;
-				padding: 3px 0px;
-				max-width: 153px;
-				position: relative;
-				border-left: 1px solid #C9F7CA;
-				&:before {
-					top: 7px;
-					left: 15px;
-					font-size: 18px;
-					content: '\f002';
-					font-weight: 400;
-					position: absolute;
-					font-family: 'Font Awesome 5 Pro';
-				}
-				input {
-					width: 100%;
-					border: none;
-					padding-left: 44px;
-					&::placeholder {
-						font-size: 14px;
-						color: rgba(16, 16, 16, 0.4);
+					.dropdown-menu {
+						a {
+							color: var(--vt-title-color) !important;
+							&:hover,
+							&.active {
+								padding-left: 35px !important;
+								color: #C9F7CA !important;
+								&:before {
+									left: 18px;
+								}
+							}
+						}
+					}
+					&:hover {
+						&:before {
+							width: 24px;
+						}
+						&:after {
+							color: #3533FF;
+						}
+						a {
+							color: #3533FF;
+						}
+
 					}
 				}
 			}
 		}
-		.action-text {
-			width: 100%;
-			max-width: 221px;
-			padding: 4px 0px;
-			border-left: 1px solid #C9F7CA;
+		.header-cta-btn {
+			margin-left: 20px;
 			a {
-				padding-left: 16px;
-				font-size: 14px;
-				color: var(--vt-title-color);
-				span {
-					font-weight: 600;
-				}
-				i {
-					margin-left: 10px;
-					transform: rotate(-45deg);
-				}
+				color: #C9F7CA;
+				font-size: 15px;
+				padding: 12px 22px;
+				font-family: var(--vt-heading);
+				background-color: var(--vt-title-color);
 			}
 		}
-		.action-social {
-			width: 100%;
-			max-width: 145px;
-			padding: 4px 0px;
-			border-left: 1px solid #C9F7CA;
-			a {
-				margin-left: 15px;
-				&:hover {
-					color: #C9F7CA;
-				}
-			}
+		.canvas-trigger {
+			margin-left: 20px;
 		}
 	}
 }
