--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -23,7 +23,10 @@
 /*----------------------------------------------------*/
 @import "home_1/banner";
 /*---------------------------------------------------- */
-
+/*Service Section*/
+/*----------------------------------------------------*/
+@import "home_1/service";
+/*---------------------------------------------------- */
 
 
 
