--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -27,7 +27,10 @@
 /*----------------------------------------------------*/
 @import "home_1/service";
 /*---------------------------------------------------- */
-
+/*About Section*/
+/*----------------------------------------------------*/
+@import "home_1/about";
+/*---------------------------------------------------- */
 
 
 /*Footer Section*/
