--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2227,6 +2227,125 @@ select:visited {
   background: linear-gradient(180deg, #CFE2FF 0%, #A4A7FE 100%);
 }
 
+.vt-service-item-2 {
+  z-index: 1;
+  height: 890px;
+  padding-top: 80px;
+}
+.vt-service-item-2 .item-img {
+  top: 0;
+  left: 0;
+  z-index: -1;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+.vt-service-item-2 .item-img:before {
+  top: 0;
+  left: 0;
+  width: 50%;
+  content: "";
+  z-index: 1;
+  height: 100%;
+  position: absolute;
+  background: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0.4)), to(rgba(255, 255, 255, 0)));
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0.4) 0%, rgba(255, 255, 255, 0) 100%);
+}
+.vt-service-item-2 .item-img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.vt-service-item-2 .item-text .vt-section-title {
+  max-width: 495px;
+}
+.vt-service-item-2 .item-text .vt-section-title .section_title {
+  font-size: 64px;
+}
+
+.vt-service-thumb {
+  z-index: 2;
+  left: 18.5%;
+  bottom: 60px;
+  height: 290px;
+  position: absolute;
+  max-height: 290px;
+}
+
+.vt-service-title {
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+.vt-service-title h3 {
+  color: #5D5D5D;
+  font-size: 20px;
+  cursor: pointer;
+  position: relative;
+  padding-left: 12px;
+  font-family: var(--vt-body-font);
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+.vt-service-title h3 span {
+  position: relative;
+  display: inline-block;
+}
+.vt-service-title h3 span:after {
+  left: 0;
+  right: 0;
+  width: 0%;
+  content: "";
+  bottom: -5px;
+  height: 4px;
+  margin: 0 auto;
+  position: absolute;
+  -webkit-transition: all 800ms ease;
+  transition: all 800ms ease;
+  background-color: var(--vt-title-color);
+}
+.vt-service-title h3:before {
+  left: 0;
+  top: 11px;
+  width: 4px;
+  height: 4px;
+  content: "";
+  position: absolute;
+  border-radius: 100%;
+  background-color: #5D5D5D;
+  -webkit-transition: all 500ms ease;
+  transition: all 500ms ease;
+}
+
+.vt-service-thumb .swiper-slide {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.swiper-slide-thumb-active .vt-service-title {
+  padding-bottom: 20px;
+}
+.swiper-slide-thumb-active .vt-service-title h3 {
+  font-size: 45px;
+  padding-left: 16px;
+  color: var(--vt-title-color);
+  font-family: var(--vt-heading);
+}
+.swiper-slide-thumb-active .vt-service-title h3 span:after {
+  width: 100%;
+  -webkit-transition-delay: 800ms;
+          transition-delay: 800ms;
+}
+.swiper-slide-thumb-active .vt-service-title h3:before {
+  top: 24px;
+  width: 8px;
+  height: 8px;
+}
+
 /*---------------------------------------------------- */
 /*About Section*/
 /*----------------------------------------------------*/
